--- a/templates/index.html
+++ b/templates/index.html
@@ -1,44 +1,8 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends 'base.html' %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    <title>My Todos</title>
-  </head>
-  <body>
-
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">My Todo</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
-              </li>   
-
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">About</a>
-              </li>             
+{% block body %}
+    
+     
               
             
             </ul>
@@ -60,26 +24,30 @@
             <div class="mb-3">
               <label for="title" class="title">Description</label>
               <input type="title" class="form-control" name="desc" id="title">
-            </div>
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
+            </div>            
             <button type="submit" class="btn btn-outline-dark">Submit</button>
           </form>
 
           <div>
-            <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">sno</th>
-                    <th scope="col">Title</th>
-                    <th scope="col">Description</th>
-                    <th scope="col">Time</th>
-                    <th scope="col">Action</th>
-                  </tr>
-                </thead>
-                <tbody>
+
+                    {% if alltodo | length == 0 %}                   
+                    <div class="alert alert-dark my-3" role="alert">
+                        No Todos, Please add your first Todo!
+                      </div>
+                         {% else %}
+                         <table class="table">
+                            <thead>                                                
+                              <tr>
+                                <th scope="col">sno</th>
+                                <th scope="col">Title</th>
+                                <th scope="col">Description</th>
+                                <th scope="col">Time</th>
+                                <th scope="col">Action</th>
+                              </tr>
+                            </thead>
+                            <tbody>                
+                   
+                    
                     {% for todo in alltodo %}
                        <tr>
                            <th scope="row">{{loop.index}}</th>
@@ -91,15 +59,13 @@
                             <a href ="/update/{{todo.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Update</button>
                            </td>
                         </tr>
-                        
-                    {% endfor %}
-                  
-                 
-                </tbody>
-              </table>
+                        {% endfor %}
+                         </tbody>
+                         </table>
+                        {% endif %}
+                                                  
           </div>
     </div>
+   
 
-      
-  </body>
-</html>
+{% endblock body %}         
