--- a/templates/update.html
+++ b/templates/update.html
@@ -37,7 +37,7 @@
               </li>   
 
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">About</a>
+                <a class="nav-link active" aria-current="page" href="/about">About</a>
               </li>             
               
             
